bug 706888 - ignore GSUB in broken version of Droid Sans Arabic. r=jdaggett